# humblebundle-to-sqlite

./: .gitignore  .nitpick-style.toml  .nitpick.toml  .pre-commit-config.yaml  README.adoc  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
make/: _commands.sh  clean.sh  init.sh  test-all.sh  test.sh  update.sh
src/humblebundle_to_sqlite/: __init__.py  __main__.py  cli.py  etl.py
test/: conftest.py  humblebundle.com.bundles.html  humblebundle.com.items.books.bad.html  humblebundle.com.items.books.html  humblebundle.com.items.games.html  humblebundle.com.items.software.html  test_cli.py  test_etl.py
