[coverage:run]
branch = True
data_file = .cache/coverage
omit = setup.py
source = .

[flake8]
doctests = True
ignore = E501
max-complexity = 6
max-line-length = 88
per-file-ignores = test/*:S101
select = B, B9, C, E, F, S, W
show-source = True

[mypy]
cache_dir = .cache/mypy
pretty = True
strict = True

[mypy-setuptools]
ignore_missing_imports = True

[tool:pytest]
addopts = --strict-config --strict-markers --doctest-modules --cov --cov-report=term-missing
cache_dir = .cache/pytest
markers = acceptance: marker for acceptance tests.

[metadata]
version = attr: humblebundle_to_sqlite.__version__
